src/test/deca/context/valid/provided/if_or.deca
{
if (true || false) {
	println("if_or_test_done");
	}
}
