src/test/deca/context/invalid/provided/testi18.deca
{
    boolean b = true;
    float x;
    x = (float)(b);
}